# object_recognition_yolo

ork_yolo/: CMakeLists.txt  package.xml  setup.py
ork_yolo/conf/: detection.ork  detection.ros.ork  training.ork
ork_yolo/data/: imagenet.room.txt  process.py
ork_yolo/data/apple/: apple.blend  apple.blend1  apple.mtl  apple.prefab
ork_yolo/data/apple/Materials/: apple.mat  apple_kuki.mat
ork_yolo/data/apple/apple_Meshes/: apple_Prim.01.asset  apple_Prim.02.asset
ork_yolo/data/cannedjuice_350ml/: cannedjuice.blend  cannedjuice.blend1  cannedjuice.mtl
ork_yolo/data/cannedjuice_350ml/Materials/: cannedjuice_350ml.physicMaterial  cannedjuice_350ml_huta.mat  cannedjuice_350ml_label_c01.mat
ork_yolo/data/coke/: coke.blend
ork_yolo/data/cup/: cup_c01.fbx  cup_c02.blend  cup_c02.blend1  cup_c02.mtl
ork_yolo/data/cup/Materials/: cup_c01.mat  cup_c02.mat
ork_yolo/data/cup/cup_c01_Meshes/: cup_c01_Prim.01.asset  cup_c01_Prim.02.asset
ork_yolo/data/cup/cup_c02_Meshes/: cup_c02_Prim.01.asset  cup_c02_Prim.02.asset
ork_yolo/data/doll_bear/: doll_bear.blend  doll_bear.blend1  doll_bear.mtl  doll_bear.prefab
ork_yolo/data/doll_bear/Materials/: doll_bear.mat
ork_yolo/data/doll_dog/: doll_dog.blend  doll_dog.blend1  doll_dog.mtl  doll_dog.prefab
ork_yolo/data/doll_dog/Materials/: boundBoxShader.mat  doll_dog.mat
ork_yolo/data/doll_rabbit/: doll_rabbit.blend  doll_rabbit.blend1  doll_rabbit.mtl  doll_rabbit.prefab
ork_yolo/data/doll_rabbit/Materials/: boundBoxShader.mat  doll_rabbit.mat
ork_yolo/data/doll_rabbit/doll_rabbit.fbm/Materials/: doll_rabbit.mat
ork_yolo/data/duck/: babytoy_D.prefab  duck.blend  duck.blend1  duck.mtl
ork_yolo/data/duck/Materials/: toyD_kao.mat  toy_MokuRed.mat  toy_MokuSiro.mat  toy_kuro.mat  toy_yellow.mat
ork_yolo/data/duck/toy_D_Meshes/: toy_D_Prim.01.asset  toy_D_Prim.02.asset  toy_D_Prim.03.asset  toy_D_Prim.04.asset  toy_D_Prim.05.asset  toy_D_Prim.06.asset
ork_yolo/data/ketchup/: ketchup.blend  ketchup.blend1  ketchup.mtl
ork_yolo/data/ketchup/Materials/: ketchup_label.mat  nakami_phong2.mat  phong1.mat  phong2.mat
ork_yolo/data/ketchup/ketchup_full_Meshes/: ketchup_full_Prim.01.asset  ketchup_full_Prim.02.asset  ketchup_full_Prim.03.asset  ketchup_full_Prim.04.asset
ork_yolo/data/sauce/: sauce.blend  sauce.blend1  sauce.mtl
ork_yolo/data/sauce/Materials/: phong2.mat  phong3.mat  sauce_label.mat
ork_yolo/data/soysauce/: soysauce.blend  soysauce.blend1  soysauce.mtl  soysauce2.fbx
ork_yolo/data/soysauce/Materials/: bin_01.mat  lambert2.mat  phong2.mat
ork_yolo/data/soysauce/soy_full_Meshes/: soy_full_Prim.01.asset  soy_full_Prim.02.asset  soy_full_Prim.03.asset  soy_full_Prim.04.asset  soy_full_Prim.05.asset
ork_yolo/data/sugar/: sugar.blend  sugar.blend1  sugar.mtl
ork_yolo/data/sugar/Materials/: sugar_bou.mat  sugar_moji.mat  sugar_moji2.mat
ork_yolo/data/sugar/sugar_Meshes/: sugar_Prim.01.asset  sugar_Prim.02.asset  sugar_Prim.03.asset
ork_yolo/data/tumblerglass/: tumblerglass.blend  tumblerglass.blend1  tumblerglass.mtl  tumblerglass_c01.prefab  tumblerglass_c02.prefab
ork_yolo/data/tumblerglass/Materials/: wineglass_phong1.mat  wineglass_phong1_0.mat
ork_yolo/plasms/: README.md  detect_bag.py  detect_images.py  generate_images.py  publish_image.py  ros_generate_images.py  ros_generate_observations.py
ork_yolo/python/object_recognition_yolo/: __init__.py  detector.py  trainer.py
ork_yolo/src/: CMakeLists.txt  ModelFiller.cpp  image_mux.cpp  module.cpp  observation_renderer.cpp  save_training_data.cpp  yolo_detect.cpp  yolo_train.cpp
